--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="ditck"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -71,6 +72,8 @@
             android:value="AIzaSyBfz-1RoLBgkCZvKy8Qx--RyGNB-NW3xmU" />
     </application>
     <queries>
+        <package android:name="com.whatsapp" />
+        <package android:name="com.whatsapp.w4b" />
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
