--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   google_sign_in: ^6.3.0
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.2
+  iconsax: ^0.0.8
+  camera: ^0.11.2
+  image_picker: ^1.2.0
+  permission_handler: ^12.0.1
+  firebase_storage: ^13.0.0
 
 dev_dependencies:
   flutter_test:
